--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -20,11 +21,17 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "lodash": "^3.10.1",
+    "passport": "^0.3.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
     "rc": "~0.5.0",
-    "sails": "~0.11.3",
-    "sails-auth": "^2.1.1",
+    "sails": "^0.12.0-rc7",
+    "sails-auth": "~2.1.3",
+    "sails-permissions": "~2.1.11",
     "sails-disk": "~0.10.0",
-    "sails-permissions": "^2.1.11"
+    "sails-generate-auth": "^0.3.1",
+    "sails-permissions": "^2.1.11",
+    "validator": "^4.5.0"
   },
   "scripts": {
     "debug": "node debug app.js",
