--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "pluralize": "^1.0.1",
     "rc": "~0.5.0",
+    "request": "^2.67.0",
     "sails": "^0.12.0-rc7",
     "sails-disk": "~0.10.0",
     "validator": "^4.5.0",
