--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcryptjs": "^2.3.0",
     "connect-redis": "^3.0.2",
     "ejs": "~0.8.4",
+    "express-jwt": "^3.3.0",
     "fnv-plus": "^1.2.10",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -22,6 +23,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "jsonwebtoken": "^5.5.4",
     "lodash": "^3.10.1",
     "passport": "^0.3.2",
     "passport-http": "^0.3",
